# tacky

./: .env.secret  .envrc  .gitignore  LICENSE  README.md  justfile  pyproject.toml  setup.py
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
src/: __main__.py  version.py
src/styles/: style.css
src/tacky/: __init__.py
